objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Unomy_Contacts_Job_Product__c</fullName>
        <label>Unomy Contacts Job Product</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Sales__c</fullName>
        <label>Unomy Contacts Job Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Support__c</fullName>
        <label>Unomy Contacts Job Support</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Training__c</fullName>
        <label>Unomy Contacts Job Training</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_C_Level__c</fullName>
        <label>Unomy Contacts Mgmt C Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Directors__c</fullName>
        <label>Unomy Contacts Mgmt Directors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Non_Managers__c</fullName>
        <label>Unomy Contacts Mgmt Non Managers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_VP_Level__c</fullName>
        <label>Unomy Contacts Mgmt VP Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Max__c</fullName>
        <label>Unomy Estimated Revenue Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Min__c</fullName>
        <label>Unomy Estimated Revenue Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue__c</fullName>
        <label>Unomy Estimated Revenue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Facebook_Likes__c</fullName>
        <label>Unomy Facebook Likes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Founded__c</fullName>
        <label>Unomy Founded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Industries__c</fullName>
        <label>Unomy Industries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Industry__c</fullName>
        <label>Unomy Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Investments__c</fullName>
        <label>Unomy Investments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Investors__c</fullName>
        <label>Unomy Investors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Latest_Round__c</fullName>
        <label>Unomy Latest Round</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unomy_Lease_Details_URL__c</fullName>
        <label>Lease Details - Unomy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Address__c</fullName>
        <label>Unomy Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_City__c</fullName>
        <label>Unomy Location City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Country__c</fullName>
        <label>Unomy Location Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_State__c</fullName>
        <label>Unomy Location State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Metadata__c</fullName>
        <label>Unomy Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Technologies_Used__c</fullName>
        <label>Unomy Technologies Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding_Full__c</fullName>
        <label>Unomy Total Funding Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding__c</fullName>
        <label>Unomy Total Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Twitter_Followers__c</fullName>
        <label>Unomy Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Updated_DateTime__c</fullName>
        <description>The date/time a record was updated from Unomy</description>
        <label>Unomy Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unomy_User__c</fullName>
        <label>Unomy User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Kind__c</fullName>
        <description>This field is populated by Jitterbunny by space systems. and tells us what kind of membership this contact has with us.</description>
        <inlineHelpText>This field accurately tells us what kind of membership this contact has or had with us.</inlineHelpText>
        <label>User Kind</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_SFMC_Contacts_Emails_Deployed__c</fullName>
        <description>SFMC link to view emails associated to Contact</description>
        <formula>HYPERLINK("http://pub.email.wework.com/WeWork_EmailsDeployed_LookUp?SubscriberKey=" &amp; CASESAFEID(Id), "View Here", "_blank")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View SFMC Contacts Emails Deployed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WW_Sync_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WW Sync Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this record was successfully synced with WeWork.com API</inlineHelpText>
        <label>WW Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeConnect_ID__c</fullName>
        <label>WeConnect ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeWork_ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WeWork Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Activity_Score__c</fullName>
        <label>Website Activity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WinOver_Competitor__c</fullName>
        <label>WinOver Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1776</fullName>
                </value>
                <value>
                    <fullName>Addison Treehouse</fullName>
                </value>
                <value>
                    <fullName>Assemble Shared Office</fullName>
                </value>
                <value>
                    <fullName>Barrister Executive Suites</fullName>
                </value>
                <value>
                    <fullName>Bingham Office Center</fullName>
                </value>
                <value>
                    <fullName>Blank Spaces</fullName>
                </value>
                <value>
                    <fullName>Bond Collective</fullName>
                </value>
                <value>
                    <fullName>Boxer Property</fullName>
                </value>
                <value>
                    <fullName>Cambridge Executive Suites</fullName>
                </value>
                <value>
                    <fullName>Carr Workplaces</fullName>
                </value>
                <value>
                    <fullName>Cater2me</fullName>
                </value>
                <value>
                    <fullName>CityCoHo</fullName>
                </value>
                <value>
                    <fullName>Common Desk</fullName>
                </value>
                <value>
                    <fullName>CrossCampus</fullName>
                </value>
                <value>
                    <fullName>Crowne Office Suites</fullName>
                </value>
                <value>
                    <fullName>Dallas Fort Work</fullName>
                </value>
                <value>
                    <fullName>Deskhub</fullName>
                </value>
                <value>
                    <fullName>Distrii</fullName>
                </value>
                <value>
                    <fullName>Downtown Works</fullName>
                </value>
                <value>
                    <fullName>El Camp</fullName>
                </value>
                <value>
                    <fullName>EvoNexus</fullName>
                </value>
                <value>
                    <fullName>Flex Office Space</fullName>
                </value>
                <value>
                    <fullName>Found</fullName>
                </value>
                <value>
                    <fullName>Great Room</fullName>
                </value>
                <value>
                    <fullName>Greendesk</fullName>
                </value>
                <value>
                    <fullName>Headspace Dallas</fullName>
                </value>
                <value>
                    <fullName>Impact Hub</fullName>
                </value>
                <value>
                    <fullName>Industrious</fullName>
                </value>
                <value>
                    <fullName>Intelligent Office</fullName>
                </value>
                <value>
                    <fullName>Jay Suites Shared Office Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dedupe_pattern__c</fullName>
        <description>temporary field we should delete it after usage</description>
        <label>dedupe pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for de-dupe process Jun15. it should be deleted after process completed</description>
        <label>isMaster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kdowner__c</fullName>
        <formula>HYPERLINK('https://wework--venus.lightning.force.com/lightning/r/User/'&amp; OwnerId &amp;'/view', Owner.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kdowner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <label>utm_campaign id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBP__IfbyphoneCallId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ifbyphone_Call</label>
        <referenceTo>IBP__Ifbyphone_Call__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Segment__c</fullName>
        <label>LD Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Buyer_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Buyer Persona</label>
        <referenceTo>LeanData__Buyer_Persona__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Modified_Score__c</fullName>
        <label>Modified Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tag__c</fullName>
        <label>Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization's ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team's time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect's profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Type__c</columns>
        <columns>ID_Kind__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>ID_Kind__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Partnership_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.Partnership</value>
        </filters>
        <label>All Partnership Contacts</label>
        <sharedTo>
            <roleAndSubordinates>Partnership</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Andrew_s_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>aoch</value>
        </filters>
        <label>Andrew's Contacts</label>
        <sharedTo>
            <roleAndSubordinates>Enterprise_Admin</roleAndSubordinates>
            <roleAndSubordinates>Enterprise_Solutions</roleAndSubordinates>
            <roleAndSubordinates>Enterprise_User</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>golden gekko</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_List_LA</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Lead_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filters>
        <label>Broker List - LA</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPC_Contacts</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Location_Interested__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Member__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>Account_ID_Status__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Building__c</columns>
        <columns>pi__utm_campaign__c</columns>
        <columns>pi__utm_medium__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>ads-google</value>
        </filters>
        <filters>
            <field>CONTACT.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>ads-facebook</value>
        </filters>
        <filters>
            <field>Account_ID_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>CPC Contacts</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contact_active_but_accnt_inactive</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Account_ID_Status__c</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_ID_Status__c</field>
            <operation>equals</operation>
            <value>inactive</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <label>Contact active, but accnt inactive</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Enterprise_Solutions_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Enterprise_Solutions</value>
        </filters>
        <label>Enterprise Solutions-Contacts</label>
        <sharedTo>
            <group>Enterprise_Solutions</group>
            <role>Enterprise_Admin</role>
            <role>Enterprise_Solutions</role>
            <role>Enterprise_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Affairs_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External_Affairs</value>
        </filters>
        <label>External Affairs-Contacts</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>ID_Sync_Issue</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <columns>ID_Creation_Status_Code__c</columns>
        <columns>ID_Error_Message__c</columns>
        <columns>WW_Sync_Request__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ID_Creation_Status_Code__c</field>
            <operation>notEqual</operation>
            <value>200</value>
        </filters>
        <filters>
            <field>ID_Creation_Status_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ID Sync Issue</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
</CustomObject>